@@ -125,6 +125,7 @@ void referer_log_child (void *cmd)
 #else
     execl (SHELL_PATH, SHELL_PATH, "-c", (char *)cmd, NULL);
 #endif
+    perror ("execl");
     fprintf (stderr, "Exec of shell for logging failed!!!\n");
     exit (1);
 }
@@ -141,10 +142,9 @@ void open_referer_log (server_rec *s, pool *p)
     if (*cls->fname == '|') {
 	FILE *dummy;
 	
-	spawn_child(p, referer_log_child, (void *)(cls->fname+1),
-		    kill_after_timeout, &dummy, NULL);
-
-	if (dummy == NULL) {
+	if (!spawn_child (p, referer_log_child, (void *)(cls->fname+1),
+		    kill_after_timeout, &dummy, NULL)) {
+	    perror ("spawn_child");
 	    fprintf (stderr, "Couldn't fork child for RefererLog process\n");
 	    exit (1);
 	}
@@ -153,8 +153,8 @@ void open_referer_log (server_rec *s, pool *p)
     }
     else if(*cls->fname != '\0') {
       if((cls->referer_fd = popenf(p, fname, xfer_flags, xfer_mode)) < 0) {
-        fprintf(stderr,"httpd: could not open referer log file %s.\n", fname);
         perror("open");
+        fprintf(stderr,"httpd: could not open referer log file %s.\n", fname);
         exit(1);
       }
     }
