@@ -1,5 +1,10 @@
 Changes with Apache 1.2b8
 
+  *) Report extra info from errno with many errors that cause httpd to exit.
+     spawn_child, popenf, and pclosef now have valid errno returns in the
+     event of an error.  Correct problems where errno was stomped on
+     before being reported.  [Dean Gaudet]
+
   *) In the proxy, if the cache filesystem was full, garbage_coll() was
      never called, and thus the filesystem would remain full indefinitely.
      We now also remove incomplete cache files left if the origin server
